--- a/static/css/Main/case-details.css
+++ b/static/css/Main/case-details.css
@@ -110,6 +110,55 @@
   color: var(--warning);
 }
 
+.modal-content form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+.extend,
+.form-actions {
+  grid-column: 1/-1;
+}
+
+.form-group {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.form-group label {
+  display: block;
+  font-weight: 500;
+  color: var(--color-text-secondary);
+}
+
+.form-group input,
+.form-group select {
+  width: 100%;
+  padding: 0.75rem;
+  outline: 1px solid #e2e8f0;
+  border-radius: 6px;
+  font-size: 1rem;
+}
+
+.form-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+#cancelBtn {
+  background-color: var(--danger);
+  color: var(--color-white);
+}
+
+.else {
+  text-align: center;
+  color: red;
+}
+
 @media screen and (max-width: 1200px) {
   .container-content {
     grid-template-columns: 1fr;
