--- a/templates/Client/case-detail.html
+++ b/templates/Client/case-detail.html
@@ -47,6 +47,20 @@ Case Details
           <h4>Case Type</h4>
           <p>{{ case.case_type }}</p>
         </div>
+        {% if payments %}
+        <hr id="hr">
+        <div class="detail-note">
+          <h4>Payment Records</h4>
+          <div class="payment-box">
+            {% for payment in payments %}
+            <div class="payment">
+              <h4>Amount</h4>
+              <p>{{ "Ksh {:,}".format(payment.amount) }}</p>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+        {% endif %}
       </div>
 
     </div>
@@ -64,6 +78,19 @@ Case Details
           </div>
           <div class="case-note-body">
             <p>{{ note.content }}</p>
+            {% if note.case_files %}
+            <div class="case-files-box">
+              {% for case_file in case_files if case_file.case_note_id == note.id %}
+              <div class="case-file">
+                <a style="display: flex; align-items: center; gap:1rem" download="true"
+                  href="https://lawfirm1234.s3.eu-north-1.amazonaws.com/{{ case_file.file_name }}">
+                  <h4>{{ case_file.file_name|truncate(20) }}</h4>
+                  <i class="fas fa-download"></i>
+                </a>
+              </div>
+              {% endfor %}
+            </div>
+            {% endif %}
           </div>
           <div class="case-note-footer">
             {% if note.is_internal %}
